[gd_scene load_steps=18 format=2]

[ext_resource path="res://tilesets/combatscene.png" type="Texture" id=1]
[ext_resource path="res://entities/player/cat_combatsprite.tres" type="SpriteFrames" id=2]
[ext_resource path="res://entities/enemies/combatsprite.png" type="Texture" id=3]
[ext_resource path="res://entities/enemies/idle2.png" type="Texture" id=4]
[ext_resource path="res://entities/enemies/YellowCombat.gd" type="Script" id=5]
[ext_resource path="res://Scenes/PlayerCombat.gd" type="Script" id=6]
[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/Combat.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 48.0
height = 48.0

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.52549 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.439216, 0.788235, 0.192157, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.415686 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 32.0
height = 48.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 9

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Combat" type="Node"]
pause_mode = 2
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -136.0
margin_right = 240.0
margin_bottom = 136.0
texture = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 0, -32 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 120, 144 )
frames = ExtResource( 2 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 120, 168 )
shape = SubResource( 1 )

[node name="Panel" type="Panel" parent="Player"]
margin_left = 96.0
margin_top = 216.0
margin_right = 384.0
margin_bottom = 288.0
custom_styles/panel = SubResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 56.0
margin_top = 40.0
margin_right = 184.0
margin_bottom = 240.0

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
visible = false
margin_right = 128.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 75.0
percent_visible = false

[node name="Enemy" type="KinematicBody2D" parent="VBoxContainer"]
position = Vector2( -288, -56 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="VBoxContainer/Enemy"]
position = Vector2( 352, 136 )
frames = SubResource( 2 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Enemy"]
position = Vector2( 352, 152 )
shape = SubResource( 3 )

[node name="PlayerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -262.0
margin_right = -272.0
margin_bottom = -214.0
custom_styles/panel = SubResource( 6 )

[node name="HP" type="ProgressBar" parent="PlayerPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -56.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 75.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/HP"]
margin_left = 2.0
margin_right = 45.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "HP: 00/00"

[node name="MP" type="ProgressBar" parent="PlayerPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -20.0
margin_right = 56.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 75.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/MP"]
margin_left = 2.0
margin_right = 45.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "MP: 00/00"

[node name="EnemyPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = -86.0
margin_right = -96.0
margin_bottom = -14.0
custom_styles/panel = SubResource( 6 )

[node name="HP" type="ProgressBar" parent="EnemyPanel"]
margin_left = 256.0
margin_top = -160.0
margin_right = 368.0
margin_bottom = -144.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 75.0
percent_visible = false

[node name="Label" type="Label" parent="EnemyPanel/HP"]
margin_left = 2.0
margin_right = 45.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "HP: 00/00"

[node name="ActionPanel" type="Panel" parent="."]
margin_left = 108.0
margin_top = 227.0
margin_right = 372.0
margin_bottom = 251.0
custom_styles/panel = SubResource( 7 )

[node name="Actions" type="HBoxContainer" parent="ActionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Scratch" type="Button" parent="ActionPanel/Actions"]
margin_right = 78.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Scratch"

[node name="Cast Spell" type="Button" parent="ActionPanel/Actions"]
margin_left = 88.0
margin_right = 166.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Cast Spell"

[node name="Run" type="Button" parent="ActionPanel/Actions"]
margin_left = 176.0
margin_right = 254.0
margin_bottom = 19.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Run"

[node name="Label" type="Label" parent="ActionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -47.0
margin_right = 136.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 7 )
text = "What would you like to do next?"
valign = 1

[node name="TextBox" type="Panel" parent="."]
visible = false
margin_left = 112.0
margin_top = 184.0
margin_right = 368.0
margin_bottom = 224.0
custom_styles/panel = SubResource( 8 )

[node name="Label" type="Label" parent="TextBox"]
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -19.0
custom_fonts/font = ExtResource( 7 )
text = "hi"

[node name="Label2" type="Label" parent="TextBox"]
margin_left = 240.0
margin_top = 24.0
margin_right = 264.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 7 )
text = ">"

[connection signal="pressed" from="ActionPanel/Actions/Scratch" to="." method="_on_Scratch_pressed"]
[connection signal="pressed" from="ActionPanel/Actions/Cast Spell" to="." method="_on_Cast_Spell_pressed"]
[connection signal="pressed" from="ActionPanel/Actions/Run" to="." method="_on_Run_pressed"]
